force-app/main/default/objects/Spread_Exception__c/Spread_Exception__c.object-meta.xml
<CustomObject>
    <description>Lifecycle record for a spread review exception.</description>
    <label>Spread Exception</label>
    <nameField>
        <displayFormat>EXC-{0000}</displayFormat>
        <label>Spread Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Exceptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>