force-app/main/default/objects/Spread_Exception__c/fields/Spread_Document__c.field-meta.xml
<CustomField>
    <fullName>Spread_Document__c</fullName>
    <label>Spread Document</label>
    <referenceTo>Spread_Document__c</referenceTo>
    <relationshipLabel>Spread Exceptions</relationshipLabel>
    <relationshipName>Spread_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>